[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "adv_mla_at2_exp"
version = "0.0.1"
description = "This project focuses on building two models for an American retailer with 10 stores across California, Texas, and Wisconsin. The first model is a machine learning-based predictive model to estimate daily sales revenue for specific items at individual stores. The second model is a time-series forecasting model that predicts total sales revenue across all stores and items for the next 7 days. The models are deployed as APIs using Streamlit to provide real-time predictions and forecasts for business use."
authors = [
  { name = "Your name (or your organization/company/team)" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["adv_mla_at2_exp"]
force_sort_within_sections = true
