[tool.poetry]
name = "adv-mla-at2-exp"
version = "0.1.0"
description = ""
authors = ["Sadman Sakib <sadmansakib25091570@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.2"
scikit-learn = "1.5.1"
jupyterlab = "4.2.3"
lightgbm = "^4.5.0"
catboost = "^1.2.7"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
prophet = "^1.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
